syntax = "proto3";

option csharp_namespace = "LKDin.Admin";

package user;

import "Protos/shared.proto";

service User {
  rpc CreateUser(UpsertUserRequest) returns (shared.ActionReply);

  rpc UpdateUser(UpsertUserRequest) returns (shared.ActionReply);

  rpc DeleteUser(shared.DeleteActionRequest) returns (shared.ActionReply);
}

// The request message containing the user's name.
message UpsertUserRequest {
  string name = 1;
  string id = 2;
  string password = 3;
}