syntax = "proto3";

option csharp_namespace = "LKDin.Admin";

package work_profile;

import "Protos/shared.proto";

service WorkProfile {
  rpc CreateWorkProfile(UpsertWorkProfileRequest)
      returns (shared.ActionReply);

  rpc UpdateWorkProfile(UpsertWorkProfileRequest)
      returns (shared.ActionReply);

  rpc DeleteWorkProfile(shared.DeleteActionRequest)
      returns (shared.ActionReply);

  rpc DeleteWorkProfileImage(shared.DeleteActionRequest)
      returns (shared.ActionReply);
}

message UpsertSkillRequest {
    string name = 1;
}

message UpsertWorkProfileRequest {
        string description = 1;
        string userId = 2;
        repeated UpsertSkillRequest skills = 3;
}